# bitcaskpy

./: .gitignore  README.md  log_demo.py  plan.md  pyproject.toml  reading.txt  requirements.txt
app/: __init__.py
app/cli/: __init__.py  main.py
app/client/: __init__.py  client.py
app/core/: __init__.py
app/core/config/: __init__.py  defaults.py
app/core/store/: __init__.py  bitcask_store.py  hash_table.py  segment.py  segment_manager.py
app/logging/: logger_factory.py  logging_config.py
app/server/: __init__.py  main.py
bitcask-cli/: main.py
bitcaskpy/: __init__.py
bitcaskpy/docs/: FORMAT.md
bitcaskpy/src/config/: defaults.py
bitcaskpy/src/store/: bitcask_store.py  entry.py  hash_table.py  segment.py  segment_manager.py
bitcaskpy/store/: bitcask_store.py  hash_table.py  segment.py  segment_manager.py
bitcaskpy/tests/test_store/: test_bitcask_store.py  test_entry.py  test_hash_table.py  test_segment.py  test_segment_manager.py
cli/: pyproject.toml
cli/bitcaskpy_cli/: main.py  store_config.py
client/: pyproject.toml
client/bitcaskpy_client/: __init__.py  client.py
core/: pyproject.toml
core/bitcaskpy/: __init__.py
core/bitcaskpy/store/: bitcask_store.py  entry.py  hash_table.py  segment.py  segment_manager.py
docs/: API.md  ARCHITECTURE.md  JOURNEY.md
docs/system-design-learnings/: CONCURRENCY-CONTROL.md  OBSERVABILITY-AND-LOGGING.md  observability-and-logging.md
server/: pyproject.toml
server/bitcaskpy_server/: __init__.py  main.py
tests/test_store/: test_bitcask_store.py  test_entry.py  test_hash_table.py  test_segment.py  test_segment_manager.py
