[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcaskpy"
version = "0.1.0"
description = "A log-structured key-value store inspired by Bitcask, implemented in Python."
authors = [
    { name = "Alfurquan", email = "zahedilalfurquan20@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "click==8.1.0",
    "requests==2.31.0",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "structlog==22.1.0"
]

[tool.setuptools]
packages = ["app", "app.core", "app.core.config", "app.core.store", "app.cli", "app.server", "app.client"]

[project.scripts]
bitcaskpy = "app.cli.main:cli"
bitcaskpy-server = "app.server.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]
