[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcaskpy-client"
version = "0.1.0"
description = "HTTP client library for BitcaskPy key-value store."
authors = [
    { name = "Alfurquan", email = "zahedilalfurquan20@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "requests==2.31.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bitcaskpy_client*"]
